<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">KSync</string>
    <string name="app_name_title" translatable="false">Infomaniak Sync</string>
    <string name="account_type" translatable="false">infomaniak.com.sync</string>
    <string name="account_type_address_book" translatable="false">com.infomaniak.sync.address_book</string>
    <string name="account_title_address_book">Infomaniak Sync Address book</string>
    <string name="address_books_authority" translatable="false">com.infomaniak.sync.addressbooks</string>
    <string name="address_books_authority_title">Address books</string>
    <string name="help">Help</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="please_wait">Please wait …</string>
    <string name="send">Send</string>
    <string name="homepage_url" translatable="false">https://www.davx5.com/</string>
    <string name="twitter_handle" translatable="false">davx5app</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like certain invalid files</string>
    <string name="notification_channel_sync_io_errors">Network and I/O errors</string>
    <string name="notification_channel_sync_io_errors_desc">Timeouts, connection problems, etc. (often temporary)</string>
    <string name="notification_channel_sync_status">Status messages</string>
    <string name="notification_channel_sync_status_desc">Informational status messages like number of dismissed changes of read-only collections</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="startup_autostart_permission">Automatic synchronization</string>
    <string name="startup_autostart_permission_message">%s firmware often blocks automatic synchronization. In this case, allow automatic synchronization in your Android settings.</string>
    <string name="startup_battery_optimization">Background synchronisation</string>
    <string name="startup_battery_optimization_message">For automatic background synchronisation of your contacts and calendars, it is necessary to disable the Android \"Battery optimisation\" option for Infomaniak Sync.</string>
    <string name="startup_battery_optimization_disable">Authorise background execution</string>
    <string name="startup_dont_show_again">Don\'t show again</string>
    <string name="startup_not_now">Not now</string>
    <string name="startup_donate">Open-Source Information</string>
    <string name="startup_donate_message">We\'re happy that you use DAVx⁵, which is open-source software (GPLv3). Because developing DAVx⁵ is hard work and took us thousands of working hours, please consider a donation.</string>
    <string name="startup_donate_now">Show donation page</string>
    <string name="startup_donate_later">Maybe later</string>
    <string name="startup_more_info">More information</string>
    <string name="startup_opentasks_not_installed">OpenTasks not installed</string>
    <string name="startup_opentasks_not_installed_message">To synchronize tasks, the free app OpenTasks is required. (Not required for contacts/events.)</string>
    <string name="startup_opentasks_reinstall_davx5">After installing OpenTasks, you have to RE-INSTALL Infomaniak Sync and add your accounts again (Android bug).</string>
    <string name="startup_opentasks_not_installed_install">Install OpenTasks</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_build_date">Compiled on %s</string>
    <string name="about_infomaniak_copyright"><![CDATA[Infomaniak Sync enables you to sync the contacts and calendars in WorkSpace, Infomaniak\'s webmail service. <br>This application is a fork of the OpenSource <a href=\'https://www.davx5.com/\'>DAVx⁵</a> solution.]]></string>
    <string name="about_copyright" translatable="false">© Ricki Hirner, Bernhard Stockmann (bitfire web engineering)</string>
    <string name="about_flavor_info">This version is only eligible for distribution over Google Play.</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>
    <string name="logging_couldnt_create_file">Couldn\'t create log file</string>
    <string name="logging_notification_title">Infomaniak Sync logging</string>
    <string name="logging_notification_text">Now logging all Infomaniak Sync activities</string>
    <string name="logging_notification_send_log">Send log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_subtitle">CalDAV/CardDAV synchronisation tool</string>
    <string name="navigation_drawer_about">About / License</string>
    <string name="navigation_drawer_beta_feedback">Beta feedback</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_news_updates">News &amp; updates</string>
    <string name="navigation_drawer_external_links">External links</string>
    <string name="navigation_drawer_website">Web site</string>
    <string name="navigation_drawer_manual">Manual (Original)</string>
    <string name="navigation_drawer_faq">FAQ</string>
    <string name="navigation_drawer_forums">Help / Forums</string>
    <string name="navigation_drawer_donate">Donate</string>
    <string name="account_welcome_add_first_account">Click on + to add a WorkSpace account.</string>
    <string name="account_list_empty">Welcome to Infomaniak Sync!\n\nYou can add a Infomaniak account now.</string>
    <string name="accounts_global_sync_disabled">System-wide automatic synchronization is disabled</string>
    <string name="accounts_global_sync_enable">Enable</string>
    <string name="dav_service_refresh_failed">Service detection failed</string>
    <string name="dav_service_refresh_couldnt_refresh">Couldn\'t refresh collection list</string>
    <string name="app_settings">Settings</string>
    <string name="app_settings_debug">Debugging</string>
    <string name="app_settings_show_debug_info">Show debug info</string>
    <string name="app_settings_show_debug_info_details">View/share software and configuration details</string>
    <string name="app_settings_logging">Verbose logging</string>
    <string name="app_settings_logging_on">Logging is active</string>
    <string name="app_settings_logging_off">Logging is disabled</string>
    <string name="app_settings_connection">Connection</string>
    <string name="app_settings_override_proxy">Override proxy settings</string>
    <string name="app_settings_override_proxy_on">Use custom proxy settings</string>
    <string name="app_settings_override_proxy_off">Use system default proxy settings</string>
    <string name="app_settings_override_proxy_host">HTTP proxy host name</string>
    <string name="app_settings_override_proxy_port">HTTP proxy port</string>
    <string name="app_settings_security">Security</string>
    <string name="app_settings_distrust_system_certs">Distrust system certificates</string>
    <string name="app_settings_distrust_system_certs_on">System and user-added CAs won\'t be trusted</string>
    <string name="app_settings_distrust_system_certs_off">System and user-added CAs will be trusted (recommended)</string>
    <string name="app_settings_reset_certificates">Reset (un)trusted certificates</string>
    <string name="app_settings_reset_certificates_summary">Resets trust of all custom certificates</string>
    <string name="app_settings_reset_certificates_success">All custom certificates have been cleared</string>
    <string name="app_settings_user_interface">User interface</string>
    <string name="app_settings_notification_settings">Notification settings</string>
    <string name="app_settings_notification_settings_summary">Manage notification channels and their settings</string>
    <string name="app_settings_reset_hints">Reset hints</string>
    <string name="app_settings_reset_hints_summary">Re-enables hints which have been dismissed previously</string>
    <string name="app_settings_reset_hints_success">All hints will be shown again</string>
    <string name="account_sync_all_calendars">Synchronize all calendars</string>
    <string name="account_synchronize_now">Synchronize now</string>
    <string name="account_synchronizing_now">Synchronizing now</string>
    <string name="account_settings">Account settings</string>
    <string name="account_rename">Rename account</string>
    <string name="account_rename_new_name">Unsaved local data may be dismissed. Re-synchronization is required after renaming. New account name:</string>
    <string name="account_rename_rename">Rename</string>
    <string name="account_delete">Delete account</string>
    <string name="account_delete_confirmation_title">Really delete account?</string>
    <string name="account_delete_confirmation_text">All local copies of address books, calendars and task lists will be deleted.</string>
    <string name="account_select_collections_hint">Select collections to synchronize</string>
    <string name="account_carddav">CardDAV</string>
    <string name="account_caldav">CalDAV</string>
    <string name="account_webcal">Webcal</string>
    <string name="account_synchronize_this_collection">synchronize this collection</string>
    <string name="account_read_only">read-only</string>
    <string name="account_calendar">calendar</string>
    <string name="account_task_list">task list</string>
    <string name="account_sync_all_books">Synchronize all address books</string>
    <string name="account_refresh_address_book_list">Refresh address book list</string>
    <string name="account_create_new_address_book">Create new address book</string>
    <string name="account_refresh_calendar_list">Refresh calendar list</string>
    <string name="account_create_new_calendar">Create new calendar</string>
    <string name="account_no_webcal_handler_found">No Webcal-capable app found</string>
    <string name="account_install_icsx5">Install ICSx⁵</string>
    <string name="login_title">Add account</string>
    <string name="login_type_email">Login with email address</string>
    <string name="login_email_address">Email address</string>
    <string name="login_email_address_error">Valid email address required</string>
    <string name="login_password">Password</string>
    <string name="login_password_required">Password required</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_url_must_be_http_or_https">URL must begin with http(s)://</string>
    <string name="login_url_must_be_https">URL must begin with https://</string>
    <string name="login_url_host_name_required">Host name required</string>
    <string name="login_user_name">User name</string>
    <string name="create_addressbook">Create address book</string>
    <string name="create_addressbook_display_name_hint">My Address Book</string>
    <string name="create_collection_display_name">Display name (title) of this collection:</string>
    <string name="create_collection_description">Description (optional):</string>
    <string name="create_collection_home_set">Home set:</string>
</resources>