<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <TextView
                android:id="@+id/select_collections_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_touch_app_dark_compat"
                android:drawableLeft="@drawable/ic_touch_app_dark_compat"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/account_select_collections_hint"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/carddav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/carddav_menu"
                        style="@style/toolbar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/toolbar_theme"
                        app:contentInsetLeft="0dp"
                        app:contentInsetStart="0dp"
                        app:contentInsetStartWithNavigation="0dp"
                        app:navigationIcon="@drawable/ic_baseline_contacts"
                        app:title="@string/account_carddav"
                        tools:ignore="UnusedAttribute" />

                    <ProgressBar
                        android:id="@+id/carddav_refreshing"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-7dp"
                        android:layout_marginBottom="-7dp"
                        android:indeterminate="true" />

                    <at.bitfire.davdroid.ui.widget.MaximizedListView
                        android:id="@+id/address_books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:choiceMode="singleChoice" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/caldav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/caldav_menu"
                        style="@style/toolbar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/toolbar_theme"
                        app:contentInsetLeft="0dp"
                        app:contentInsetStart="0dp"
                        app:contentInsetStartWithNavigation="0dp"
                        app:navigationIcon="@drawable/ic_event_grey"
                        app:title="@string/account_caldav"
                        tools:ignore="UnusedAttribute" />

                    <ProgressBar
                        android:id="@+id/caldav_refreshing"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-7dp"
                        android:layout_marginBottom="-7dp"
                        android:indeterminate="true" />

                    <at.bitfire.davdroid.ui.widget.MaximizedListView
                        android:id="@+id/calendars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:choiceMode="multipleChoice"
                        android:descendantFocusability="beforeDescendants" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/webcal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/webcal_menu"
                        style="@style/toolbar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/toolbar_theme"
                        app:navigationIcon="@drawable/ic_event_grey"
                        app:title="@string/account_webcal"
                        tools:ignore="UnusedAttribute" />

                    <at.bitfire.davdroid.ui.widget.MaximizedListView
                        android:id="@+id/webcals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:choiceMode="multipleChoice"
                        android:descendantFocusability="beforeDescendants" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
